--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -49,7 +49,45 @@
 </div>
 
   <div class="introduction-block3">
-  <label>Introduction</label>
+  <h2>Feature Overview</h2>
+  <div class="introduction-block4">
+  <div class="introduction-block3-top">
+  <h1>Top</h1>
+  <h3> 本サイトのトップページに移動</h3>
+  </div>
+  <div class="introduction-block3-mypage">
+  <h1>My Page</h1>
+  <h3>
+  自分のプロフィール・投稿の確認と編集に移動</h3>
+  </div>
+  <div class="introduction-block3-logout">
+  <h1>Logout</h1>
+  <h3>
+  ログアウトすることができる</h3>
+  </div>
+  </div>
+  <div class="introduction-block5">
+  <div class="introduction-block3-new">
+  <h1>新規投稿</h1>
+  <h3>
+  投稿するページに移動</h3>
+  </div>
+  <div class="introduction-block3-show">
+  <h1>投稿一覧</h1>
+  <h3>投稿一覧の閲覧ページに移動</h3>
+  </div>
+  <div class="introduction-block3-osusume">
+  <h1>おすすめ</h1>
+  <h3>あなたにあったゲームを紹介するページに移動</h3>
+  </div>
+
+  </div>
+  </div>
+  </div>
+  
+
+
+
   
   </div>
  
