--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -24,27 +24,40 @@
   </div>
 
   <div class="introduction-block2">
-  
-
-    <label>About</label>
+  <h2>ABOUT</h2>
+    
     <br>
-    <h5>当サイトはゲームを</h5>
-    <br><h1>知りたい！</h1>
-    <br><h1>楽しみたい！</h1>
-    <br><h1>やってみたい！</h1>
+    <h3>当サイトはゲームを</h3>
+    <div class="introduction-block2-omo">
+    <div class="introduction-block2-1">
+    <h1>知りたい！</h1>
+    </div>
+    <div class="introduction-block2-2">
+    <h1>楽しみたい！</h1>
+    </div>
+    <div class="introduction-block2-3">
+    <h1>やってみたい！</h1>
+    </div>
+    </div>
     <br>
-    <h5>と思う皆様に</h5>
+    <h3>と思う皆様に</h3>
     <br>
+    <div class="introduction-block2-omo1">
+    <div class="introduction-block2-4">
     <h1>さらに知ってほしい！！</h1>
-    <br>
+    </div>
+    <div class="introduction-block2-5">
     <h1>さらに楽しんでほしい！！</h1>
-    <br>
+    </div>
+    <div class="introduction-block2-6">
     <h1>さらにやってほしい！！</h1>
+    </div>
+    </div>
     <br>
-    <h5>
+    <h3>
     との思いで作成したサイトになります！
     自分が持っている個性（ゲーム）を存分に共有・提供していきましょう！！！！
-    </h5>
+    </h3>
     
 </div>
 
