--- a/app/views/registers/new.html.erb
+++ b/app/views/registers/new.html.erb
@@ -23,7 +23,7 @@
   <div class="field2">
   
   <div>
-        <%= f.collection_select :tag_ids, Tag.all, :id, :name, include_blank: "syohei"  %>
+        <%= f.collection_select :tag_ids, Tag.all, :id, :name, include_blank: "タグを選択してください"  %>
   </div>
 
   </div>
