--- a/app/views/registers/show.html.erb
+++ b/app/views/registers/show.html.erb
@@ -8,13 +8,31 @@
   <div class="show-image">
     <%= image_tag @register.image_url, size: "450x350" if @register.image? %>
   <div class="show-create">
+  <div class="show-like">
+  <% if user_signed_in? %>
+  <% if current_user.already_liked?(@register) %>
+      <%= link_to register_like_path(@register), method: :delete do %>
+         <p>いいねを取り消す</p><i class="fas fa-heart"></i><%= @register.likes.count %>
+   
+      <% end %>
+  <% else %>
+      <%= link_to register_likes_path(@register), method: :post do %>
+         <p>いいね</p><i class="fas fa-heart"></i><%= @register.likes.count %>
+      <% end %>
+  <% end %>
+<% else %>
+  <p>いいねの数 = </p><%= @register.likes.count %>
+<% end %>
+</div>
   <p><%= @register.created_at %></p>
   </div>
   </div>
   <div class="container">
+
+  
     <h2>Game Title</h2>
     <p><%= @register.name %></p>
-    <div>
+    
       <h2>総合評価</h2>
       <span class="star-rating">
         <span class="star-rating-front" style="width: <%= getPercent(@register.eve) %>%;">★★★★★</span>
@@ -33,28 +51,14 @@
     <h2>E-sportの採用</h2>
       <p><%= @register.sport %></p>
     </div>
-  </div>
+ 
     
 <div class="show-about">
 <h2>コメント</h2>
   <p><%= @register.about %></p>
 </div>
 
-<div class="show-like">
-  <% if user_signed_in? %>
-  <% if current_user.already_liked?(@register) %>
-      <%= link_to register_like_path(@register), method: :delete do %>
-         <p>いいねを取り消す</p><%= @register.likes.count %>
-      <% end %>
-  <% else %>
-      <%= link_to register_likes_path(@register), method: :post do %>
-         <p>いいね</p><%= @register.likes.count %>
-      <% end %>
-  <% end %>
-<% else %>
-  <p>いいねの数 = </p><%= @register.likes.count %>
-<% end %>
-</div>
+
 
 
 <div class="show-user">
@@ -63,13 +67,19 @@
       <li><%= user.name %></li>
     <% end %>
     <% if user_signed_in? && current_user.id == @register.user_id %> 
-
-    <%= link_to "編集する", edit_register_path(@register.id) %>
-    <%= button_to "削除する", register_path(@register.id), method: :delete %>
+</div>
+<div class="show-edit">
+    <h1><%= link_to "編集する", edit_register_path(@register.id) %></h1>
+    <h1><%= link_to "削除する", register_path(@register.id), method: :delete %></h1>
     <% end %>
 
-  <h3><%= link_to "Game一覧に戻る", registers_path %></h3>
-    
+  
+</div>
+<h3><%= link_to "Game一覧に戻る", registers_path %></h3>
+</div>
+
+
+ 
 </div>
 
 </div>
