--- a/app/views/registers/edit.html.erb
+++ b/app/views/registers/edit.html.erb
@@ -1,7 +1,8 @@
 <%= form_for @register do |f| %>
 
-
-<h1>新規投稿</h1>
+<div class="edit">
+<div class="edit-1">
+<h1>投稿編集画面</h1>
 
 <%= form_for @register do |f| %>
   
@@ -67,9 +68,11 @@
 <% end %>
 
 
+</div>
+</div>
+</div>
+</div>
 
-</div>
-</div>
 </div>
 
 
