--- a/app/views/registers/new.html.erb
+++ b/app/views/registers/new.html.erb
@@ -37,9 +37,9 @@
   <div class="field4">
     
     <%= f.select :sport, 
-      [["Yes!", "Yes!"], 
-      ["No!", "NO!"], 
-      ["I don't know!", "I don't know"]], include_blank: "選択して下さい" %>
+      [["採用", "採用"], 
+      ["不採用", "不採用"], 
+      ["不明", "不明"]], include_blank: "選択して下さい" %>
   </div>
 
 
