--- a/app/assets/stylesheets/registers.scss
+++ b/app/assets/stylesheets/registers.scss
@@ -198,10 +198,48 @@ h2{
 .container{
   background: cover;
   border-top: solid 5px #5d627b;
-  box-shadow: 0 3px 5px rgba(255, 255, 255, 0.22);
-  text-align: end;
+  
 }
 
+.show-title{
+  font-size: 40px;
+  align-self: flex-end;
+  text-align: end;
+  justify-content:end;
+  background: cover;
+  border-top: solid 5px #5d627b;
+  box-shadow: 0 3px 5px rgba(255, 255, 255, 0.22);
+}
+
+.show-eve{
+  font-size: 40px;
+  align-self: flex-end;
+  text-align: end;
+  justify-content:end;
+  background: cover;
+  border-top: solid 5px #5d627b;
+  box-shadow: 0 3px 5px rgba(255, 255, 255, 0.22);
+}
+
+.show-genre{
+font-size: 30px;
+align-self: flex-end;
+text-align: end;
+justify-content:end;
+background: cover;
+border-top: solid 5px #5d627b;
+box-shadow: 0 3px 5px rgba(255, 255, 255, 0.22);
+}
+
+.show-sport{
+  font-size: 30px;
+align-self: flex-end;
+text-align: end;
+justify-content:end;
+background: cover;
+border-top: solid 5px #5d627b;
+box-shadow: 0 3px 5px rgba(255, 255, 255, 0.22);
+}
 
 
 .box26 {
@@ -223,21 +261,58 @@ h2{
   background: cover;
   border-top: solid 5px #5d627b;
   box-shadow: 0 3px 5px rgba(255, 255, 255, 0.22);
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 
 .show-about{
+  
+  align-self: center;
+  text-align: center;
+  justify-content:center;
   background: cover;
   border-top: solid 5px #5d627b;
   box-shadow: 0 3px 5px rgba(255, 255, 255, 0.22);
-  margin-bottom: 1em;
 }
+
+
+
+.show-about-box{
+  margin-left: 5em;
+  height: 300px;
+  width: 300px;
+  overflow-wrap: break-word;
+  background: black;
+  border: solid 2px #5d627b;
+  box-shadow: 0 3px 5px rgba(255, 255, 255, 0.22);
+  text-align: start;
+}
+
+.show-about-box p{
+  overflow-wrap: break-word;
+  font-size: 15px;
+}
+
 
 .show-edit{
   background: cover;
   border-top: solid 5px #5d627b;
   box-shadow: 0 3px 5px rgba(255, 255, 255, 0.22);
-  margin-bottom: 2em;
+  
+}
+
+.show-user{
+  font-size: 15px;
+  text-align: end;
+}
+/*edit*/
+
+.edit-1{
+  align-self: center;
+  text-align: center;
+  justify-content:center;
+  border: 4px double #ddd;
+  margin: 10em;
+  padding: 10em;
 }
 
 
