--- a/app/views/registers/new.html.erb
+++ b/app/views/registers/new.html.erb
@@ -65,6 +65,7 @@
   <h5>コメント</h5>
   <div class="field6">
   <%=f.text_area :about, :size=>"60x10" %>
+  <p>注:コメントは300字以下
   </div>
 
   <div class="field7">
