--- a/app/assets/stylesheets/registers.scss
+++ b/app/assets/stylesheets/registers.scss
@@ -290,19 +290,22 @@ box-shadow: 0 3px 5px rgba(255, 255, 255, 0.22);
 
 
 .show-about-box{
-  margin-left: 5em;
+ 
   height: 300px;
-  width: 300px;
+  width: 400px;
   overflow-wrap: break-word;
   background: black;
-  border: solid 2px #5d627b;
-  box-shadow: 0 3px 5px rgba(255, 255, 255, 0.22);
+  
   text-align: start;
 }
 
 .show-about-box p{
   overflow-wrap: break-word;
   font-size: 15px;
+  display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 12;
+	overflow: hidden;
 }
 
 
