--- a/app/views/registers/edit.html.erb
+++ b/app/views/registers/edit.html.erb
@@ -61,6 +61,7 @@
   <h5>コメント</h5>
   <div class="field6">
   <%=f.text_area :about, :size=>"60x10" %>
+  <p>注:300字以下
   </div>
 
   <div class="field7">
