--- a/app/views/registers/show.html.erb
+++ b/app/views/registers/show.html.erb
@@ -81,7 +81,7 @@
 
   
 </div>
-<h3><%= link_to "Game一覧に戻る", registers_path %></h3>
+<h3><%= link_to "Game一覧に戻る", registers_path, data: {"turbolinks" => false} %></h3>
 </div>
 
 
