--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -59,6 +59,6 @@
  <%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
 </div>
 <div class="field">
-<%= link_to "Topへ", :back %>
+<%= link_to "Topへ", :back, data: {"turbolinks" => false} %>
 </div>
 </div>
