--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -5,17 +5,17 @@
 
  <% if user_signed_in? %>
   <div class="box_css">
-  <li><%= link_to "新規投稿", new_register_path %></li>
-  <li><%= link_to "投稿一覧", registers_path %></li>
-  <li><%= link_to "おすすめ", registers_path %></li>
+  <li><%= link_to "新規投稿", new_register_path, data: {"turbolinks" => false} %></li>
+  <li><%= link_to "投稿一覧", registers_path, data: {"turbolinks" => false} %></li>
+  <li><%= link_to "おすすめ", registers_path, data: {"turbolinks" => false} %></li>
   <h2>Game Navigation</h2>
   </div>
   
   <% else %>
 
   <div class="login">
-  <li><%= link_to "新規登録", new_user_registration_path %></li>
-  <li><%= link_to "ログイン", new_user_session_path %></li>
+  <li><%= link_to "新規登録", new_user_registration_path, data: {"turbolinks" => false} %></li>
+  <li><%= link_to "ログイン", new_user_session_path, data: {"turbolinks" => false} %></li>
   <h2>Game Navigation</h2>
   </div>
   
