--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 	<p>メールアドレス : <%= @user.email %></p>
 	<p>プロフィール : <%= @user.profile %></p>
 	<% if current_user.id == @user.id %>
-	<%= link_to "プロフィールを編集する", edit_user_registration_path %>
+	<%= link_to "プロフィールを編集する", edit_user_registration_path , data: {"turbolinks" => false}%>
 	<% end %>
  </div>
  <div class='profile-1'>
@@ -140,7 +140,7 @@
 
 <!-- ここまで-->
 <div class='mypage-top'>
-<%= link_to "Topに戻る", tops_path %>
+<%= link_to "Topに戻る", tops_path, data: {"turbolinks" => false} %>
 </div>
 </div>
 </div>
