--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -44,7 +44,7 @@
               </div> <!-- input-group.// -->
             </div> <!-- form-group// -->
             <div class="form-group">
-              <%= f.submit "登録", class: "btn btn-outline-secondary btn-block" %>
+              <%= f.submit "登録", class: "btnn btn-outline-secondary btn-block" %>
             </div> <!-- form-group// -->
           </form>
       </div>
