--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -3,6 +3,106 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 
+$color-gray: #666;
+$color-black: #000;
+$stripe-height: 7px;
+$btn-color: $color-gray;
+$btn-background: #fff;
+$btn-color-hover: #fff;
+$btn-background-hover: $color-gray;
+$border-color: $color-gray;
+$border-color-hover: $color-black;
+
+@mixin reset-button {
+    overflow : visible;
+    margin : 0;
+    padding : 0;
+    border : 0;
+    background : transparent;
+    font : inherit;
+    line-height : normal;
+    cursor : pointer;
+    -moz-user-select : text;
+    
+    &:-moz-focus-inner {
+        padding : 0;
+        border : 0;
+    }
+}
+
+@keyframes stripe-slide {
+    0% { background-position: 0% 0; }
+    100% { background-position: 100% 0; }
+}
+
+
+
+.btn {
+    @include reset-button;
+    display: block;
+    text-decoration: none;
+    text-transform: uppercase;
+    
+    background-color: $btn-background;
+    color: $btn-color;
+    border: 2px solid $border-color;
+    border-radius: 6px;
+    margin-bottom: 16px;
+    transition: all .5s ease;
+    
+    &--stripe {
+        overflow: hidden;
+        position: relative;
+        
+        &:after {
+            content: '';
+            display: block;
+            height: $stripe-height;
+            width: 100%;
+            background-image: repeating-linear-gradient(
+                45deg,
+                $border-color,
+                $border-color 1px,
+                transparent 2px,
+                transparent 5px
+            );
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+            border-top: 1px solid $border-color;
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            background-size: $stripe-height $stripe-height;
+        }
+
+        &:hover {
+            background-color: $btn-background-hover;
+            color: $btn-color-hover;
+            border-color: $border-color-hover;
+
+            &:after {
+                background-image: repeating-linear-gradient(
+                    45deg,
+                    $btn-color-hover,
+                    $btn-color-hover 1px,
+                    transparent 2px,
+                    transparent 5px
+                );
+                border-top: 1px solid $border-color-hover;
+                animation: stripe-slide 12s infinite linear forwards;
+            }
+        }
+    }
+    
+    &--large {
+        width: 50%;
+    }
+    
+    &--radius {
+        border-radius: 36px;
+    }
+}
+
 
 .spinner {
   margin: 100px auto;
@@ -100,8 +200,8 @@
     text-align: right;
    }
 
-   li{
-     
+   .btn{
+     width: 25%;
      margin: 5em;
    }
 
@@ -115,14 +215,14 @@
 
    .box_css a{
     opacity: 0.9;
-     background-color: rgb(77, 0, 185);
-     color:  #ffeba7;
+     background-color: cover;
+     color:  black;
    }
 
    .login a{
     opacity: 0.9;
-     background-color: rgb(77, 0, 185);
-     color:  #ffeba7;
+     background-color: cover;
+     color:  black;
    }
 
 
@@ -268,11 +368,12 @@
   margin: 10em;
 }
 
-  h2{
+  .main-container h2{
   align-self: right;
-  text-align: left;
+  text-align: right;
   color: #ffeba7;
-  font-size: 60px;
+  margin-top: 2em;
+  font-size: 70px;
   }
  
 .introduction-block3 h2{
