--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -3,12 +3,12 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 
-$color-gray: #666;
-$color-black: #000;
+$color-gray: black;
+$color-black: red;
 $stripe-height: 7px;
 $btn-color: $color-gray;
-$btn-background: #fff;
-$btn-color-hover: #fff;
+$btn-background: rgb(3, 224, 143);
+$btn-color-hover: red;
 $btn-background-hover: $color-gray;
 $border-color: $color-gray;
 $border-color-hover: $color-black;
