--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -51,7 +51,7 @@
 
 				<%= link_to register_path(t.id) do %>
 					<div class='item-img-content'>
-				<%= image_tag t.image_url, size: "250x200" if t.image? %>
+				<%= image_tag t.image_url, data: {"turbolinks" => false}, size: "250x200" if t.image? %>
 				    </div>
 				<% end %>
                     
@@ -99,7 +99,7 @@
 
 				<%= link_to register_path(t.id) do %>
 					<div class='item-img-content'>
-				<%= image_tag t.image_url, size: "250x200" if t.image? %>
+				<%= image_tag t.image_url, data: {"turbolinks" => false}, size: "250x200" if t.image? %>
 				    </div>
 				<% end %>
                     
