--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -12,7 +12,7 @@
   <%= link_to "投稿一覧", registers_path, data: {"turbolinks" => false} %>
    </button>
    <button class="btn btn--stripe btn--radius">
-  <%= link_to "おすすめ", registers_path, data: {"turbolinks" => false} %>
+  <%= link_to "おすすめ", homes_path, data: {"turbolinks" => false} %>
   </button>
   <h2>Game Navigation</h2>
   </div>
