--- a/app/assets/stylesheets/registers.scss
+++ b/app/assets/stylesheets/registers.scss
@@ -10,7 +10,10 @@ h3{
   color: #ffeba7;
   font-size: 60px;
 }
-
+.register h5{
+  color: #ffeba7;
+ font-size: 15px;
+}
 .new h5{
   align-self: center;
   text-align: center;
