--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -79,7 +79,7 @@
 
   
 </div>
-<h3><%= link_to "Game一覧に戻る", homes_path, data: {"turbolinks" => false} %></h3>
+<h3><%= link_to "おすすめ一覧に戻る", homes_path, data: {"turbolinks" => false} %></h3>
 </div>
 
 
