--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.register h4{
+   
+    color:rgb(1, 255, 213);
+  font-size: 30px;
+  margin-bottom: 2em;
+}
