--- a/app/assets/stylesheets/registers.scss
+++ b/app/assets/stylesheets/registers.scss
@@ -15,10 +15,20 @@ h3{
  font-size: 15px;
 }
 .new h5{
+  position: relative;
+  padding: 0.25em 0;
   align-self: center;
   text-align: center;
   color: #ffffff;
   font-size: 20px;
+}
+
+.new h5:after {
+  content: "";
+  display: block;
+  height: 4px;
+  background: -webkit-linear-gradient(to right, rgb(230, 90, 90), transparent);
+  background: linear-gradient(to right, rgb(230, 90, 90), transparent);
 }
 
 
