--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,13 +1,14 @@
  <h3>おすすめ一覧</h3>
  
- 
+
+  
  <div class="registers-container">
 		
-		<% @register.each do |t| %>
+	 <% @register.each.with_index(1) do |t, i| %>	
 			<div class="register">
 
 			<div class="register2">
-       
+              <h4>第<%= i %>位</h4>
 				<h1><%= t.name %></h1>
 
 				<%= link_to home_path(t.id) do %>
