--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -8,3 +8,26 @@
   font-size: 30px;
   margin-bottom: 2em;
 }
+
+
+.all h4{
+  font-size: 38px;
+  color: gold;
+}
+
+.new h5:after {
+  content: "";
+  display: block;
+  height: 4px;
+  background: -webkit-linear-gradient(to right, rgb(230, 90, 90), transparent);
+  background: linear-gradient(to right, rgb(230, 90, 90), transparent);
+}
+
+.all{
+  padding: 0.5em 1em;
+  margin: 2em 0;
+  color: #5d627b;
+  background: rgb(11, 45, 101);
+  border-top: solid 5px #5d627b;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
+}
