--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,7 +4,14 @@
 
 
 
-
+  .register3{
+    align-self: center;
+    text-align: center;
+    justify-content:center;
+    border: 5px double #ddd;
+    margin: 8em;
+    padding: 10em;
+  }
   .box {
     width: 350px;
     height: 450px;
